--- a/.env
+++ b/.env
@@ -3,7 +3,8 @@ APP_ENV=local
 APP_KEY=base64:D8TJ8IcfR2DJAr1PkbDWcC5mwzTRuuTNe79INoSnuJY=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
-APP_URL=http://localhost
+APP_URL=${APP_URL}
+
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
