--- a/.env
+++ b/.env
@@ -24,11 +24,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=mysql.railway.internal
 DB_PORT=3306
-DB_DATABASE=timelink
+DB_DATABASE=railway
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=nLIiZPLQnRUrgNVHlPSyYbxurbnvYmkO
 
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
